--- a/data-types.Rmd
+++ b/data-types.Rmd
@@ -15,7 +15,7 @@ output:
     ]
 ---
 
-```{r,echo=FALSE}
+```{r,echo=FALSE,message = FALSE, warning = FALSE}
 rm(list=objects()) # start with a clean workspace
 source("knitr_tweaks.R")
 library(lsr,quietly = TRUE)
